# nsidc-icesat2gis

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml
scripts/: make_test_data.py
src/atl08_lines/: cli.py
src/nsidc/icesat2gis/: __init__.py  atl08.py  cli.py  exceptions.py  read_geom.py
tests/: conftest.py  test_atl08.py  test_package.py  test_read_geom.py
tests/data/: test_atl08.h5
