[build-system]
requires = ["uv_build>=0.7.19,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nsidc.icesat2gis"
namespace = true

[project]
name = "nsidc-icesat2gis"
version = "0.3.0"
authors = [
  { name = "Trey Stafford", email = "trey.stafford@colorado.edu" },
]
description = "Code for converting ATL08 .h5 data into polylines for viewing in GIS environments"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "click>=8.3.3",
    "dask>=2026.3.0",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "numpy>=2.2.6",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.1",
    "shapely>=2.1.2",
    "xarray>=2025.6.1",
]

[project.urls]
Homepage = "https://github.com/nsidc/nsidc-icesat2gis"
"Bug Tracker" = "https://github.com/nsidc/nsidc-icesat2gis/issues"
Discussions = "https://github.com/nsidc/nsidc-icesat2gis/discussions"
Changelog = "https://github.com/nsidc/nsidc-icesat2gis/releases"

[project.scripts]
nsidc-icesat2gis = "nsidc.icesat2gis.cli:cli"

[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
]
dev = [
  { include-group = "test" },
  "ipdb>=0.13.13",
  "ipython>=8.39.0",
  "bump-my-version>=1.3.0",
]
docs = []


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]
pythonpath = ["src/nsidc"]


[tool.coverage]
run.source = ["icesat2gis"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src/nsidc", "tests"]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Needed to work with our namespaced package! See:
# https://mypy.readthedocs.io/en/stable/running_mypy.html#mapping-paths-to-modules
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "icesat2gis.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "click.*",
  "geopandas.*",
  "pandas.*",
  "shapely.*",
  "xarray.*",
  "numpy.*",
  "pyproj.*",
]
ignore_missing_imports = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",
  "RUF015",  #  Prefer `next(iter(line.coords))` over single element slice
  "T201",  # Remove `print`
  "BLE001",  # Do not catch blind exception
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["icesat2gis._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/examples/**" = ["T20"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "broad-exception-caught",
]

[tool.bumpversion]
current_version = "0.3.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "src/nsidc/icesat2gis/__init__.py"
search   = '__version__ = "{current_version}"'
replace  = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
